test/FAIL/stepcmd/invalid_arguments/01_test_step.emu
#-------
#TEST_RETURN_CODE=FAIL
#TEST_COMMENT="invalid arguments"
#-------

load boucle.o
step 0x12
